2013-10-25  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 31890 (with Mikael's fixes in 31891): NEWS: add descriptions
	of new features since 5.0.2.

2013-10-24  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 31889: Test/D02glob.ztst: tests for disable -p.

	* 31877: Src/pattern.c: fix behaviour of disable -p for
	entities with parentheses.

2013-10-24  Barton E. Schaefer  <schaefer@zsh.org>

	* 31885: Src/jobs.c: fix PIPEFAIL behavior when the last command
	in a pipeline is executed within the current shell; add comments

2013-10-24  Peter Stephenson  <p.stephenson@samsung.com>

	* 31888: Test/A05execution.ztst: add test of pipestatus
	that was reliably failing before 31879.

	* 31882: Src/Zle/compcore.c: better insulation of
	completion widget excecution against job environment.

	* 31884: Test/A05execution.ztst: eliminate variable output
	from test due to vagaries of uniq implementation.

2013-10-23  Barton E. Schaefer  <schaefer@zsh.org>

	* 31879: Src/jobs.c: improve $pipestatus behavior when the last
	command in the pipeline is executed within the current shell

	* unposted (cf. Frank Terbeck: 30047): Test/A05redirect.ztst:
	stress test for $pipestatus handling

2013-10-23  Peter Stephenson  <p.stephenson@samsung.com>

	* 31873: Doc/Zsh/builtins.yo: Document conventions for use of
	command options with builtin commands.

2013-10-21  Barton E. Schaefer  <schaefer@zsh.org>

	* 31869: Src/input.c: reduce WINCH-twaddling in shingetline()

2013-10-21  Øystein Walle  <oystwa@gmail.com>

	* 31861: Completion/Unix/Command/_git: _git: Add git-clean
	-i/--interactive support

	* 31863: Completion/Unix/Command/_git: _git: Add new arguments
	introduced in Git v1.8.4

	* 31862: Completion/Unix/Command/_git: _git: Add status.short and
	status.branch

	* 31866: Completion/Unix/Command/_git: _git: Reword --heads to
	match new meaning

	* 31864: Completion/Unix/Command/_git: _git: Add two sub-comamnds
	introduced in v1.8.4
